--- a/translations/soul+intl-icu.es.xlf
+++ b/translations/soul+intl-icu.es.xlf
@@ -4274,7 +4274,7 @@
       </notes>
       <segment>
         <source>Denke daran, dich ebenfalls aus deinem EternalTwin Account auszuloggen!</source>
-        <target>¡Recuerda, también debes cerrar sesión en tu cuenta de Eternaltwin!</target>
+        <target>¡Recuerda, también debes cerrar sesión en tu cuenta de EternalTwin!</target>
       </segment>
     </unit>
     <unit id="TMcIHTT" name="Du kannst deinen Spielernamen erst in {days} Tagen erneut ändern.">
