--- a/translations/login+intl-icu.es.xlf
+++ b/translations/login+intl-icu.es.xlf
@@ -481,7 +481,7 @@
       </notes>
       <segment>
         <source>MyHordes ist ein Teil des EternalTwin-Netzwerks. Wenn du einen EternalTwin-Account hast, kannst du MyHordes ohne zusätzliche Registrierung spielen!</source>
-        <target>MyHordes forma parte de la red EternalTwin. ¡Si tienes una cuenta de EternalTwin, puedes jugar sin necesidad de registrarte!</target>
+        <target>MyHordes forma parte de la red Eternaltwin. ¡Si tienes una cuenta de Eternaltwin, puedes jugar sin necesidad de registrarte!</target>
       </segment>
     </unit>
     <unit id="qo4M11k" name="Über EternalTwin einloggen">
@@ -491,7 +491,7 @@
       </notes>
       <segment>
         <source>Über EternalTwin einloggen</source>
-        <target>Iniciar sesión a través de EternalTwin</target>
+        <target>Iniciar sesión a través de Eternaltwin</target>
       </segment>
     </unit>
     <unit id="LiGRhEI">
@@ -511,7 +511,7 @@
       </notes>
       <segment>
         <source>Dies wird nicht für immer möglich sein. Wir raten dir, deinen alten MyHordes-Account so bald wie möglich mit EternalTwin zu verknüpfen.</source>
-        <target>Esto no será posible para siempre. Te recomendamos que vincules tu antigua cuenta de MyHordes a EternalTwin lo antes posible.</target>
+        <target>Esto no será posible para siempre. Te recomendamos que vincules tu antigua cuenta de MyHordes a Eternaltwin lo antes posible.</target>
       </segment>
     </unit>
     <unit id="uT6i9yH">
@@ -521,7 +521,7 @@
       </notes>
       <segment>
         <source>Deine Seele bleibt bei der Verknüpfung mit EternalTwin selbstverständlich vollständig erhalten.</source>
-        <target>Por supuesto, tu alma permanece intacta al vincular tu cuenta con EternalTwin.</target>
+        <target>Por supuesto, tu alma permanece intacta al vincular tu cuenta con Eternaltwin.</target>
       </segment>
     </unit>
     <unit id="RG1kp2m" name="Über MyHordes einloggen">
@@ -541,7 +541,7 @@
       </notes>
       <segment>
         <source>Verknüpfung mit EternalTwin</source>
-        <target>Vincular con EternalTwin</target>
+        <target>Vincular con Eternaltwin</target>
       </segment>
     </unit>
     <unit id="sndALWW" name="Gleich kanns losgehen!">
@@ -567,7 +567,7 @@
                                     EternalTwin-Account in den Einstellungen mit deinem MyHordes-Account verknüpfen.</source>
         <target><![CDATA[<strong>Atención:</strong> ¿Ya tienes una cuenta de MyHordes? Entonces deberías 
                                     <i>cancelar</i> ahora e iniciar sesión con tu antigua cuenta de MyHordes. Puedes vincular tu 
-                                    cuenta de EternalTwin a tu cuenta de MyHordes en la configuración.]]></target>
+                                    cuenta de Eternaltwin a tu cuenta de MyHordes en la configuración.]]></target>
       </segment>
     </unit>
     <unit id="zHOj.3O" name="Los geht's!">
@@ -617,7 +617,7 @@
       </notes>
       <segment>
         <source>Vielen Dank, dass du deinen MyHordes-Account {namecheck_mh} mit deinem EternalTwin-Account {namecheck_et} verknüpfst!</source>
-        <target>¡Muchas gracias por vincular tu cuenta de MyHordes {namecheck_mh} con la de EternalTwin {namecheck_et}!</target>
+        <target>¡Muchas gracias por vincular tu cuenta de MyHordes {namecheck_mh} con la de Eternaltwin {namecheck_et}!</target>
       </segment>
     </unit>
     <unit id="7JD3pLt">
@@ -627,7 +627,7 @@
       </notes>
       <segment>
         <source>Nach der Verknüpfung kannst du dich nur noch über EternalTwin in MyHordes anmelden. Deine alten Zugangsdaten werden ungültig.</source>
-        <target>Después de vincular tu cuenta sólo podrás iniciar sesión en MyHordes a través de EternalTwin. Tus antiguos datos de acceso se volverán inválidos.</target>
+        <target>Después de vincular tu cuenta sólo podrás iniciar sesión en MyHordes a través de Eternaltwin. Tus antiguos datos de acceso se volverán inválidos.</target>
       </segment>
     </unit>
     <unit id="r.jGoXw">
@@ -737,7 +737,7 @@
       </notes>
       <segment>
         <source>Bevor du mit deinem EternalTwin-Account spielen kannst, brauchen wir noch ein paar zusätzliche Informationen von dir.</source>
-        <target>Antes de que puedas jugar con tu cuenta de EternalTwin, necesitamos información adicional tuya.</target>
+        <target>Antes de que puedas jugar con tu cuenta de Eternaltwin, necesitamos información adicional tuya.</target>
       </segment>
     </unit>
     <unit id="wmjJuDK">
@@ -830,7 +830,7 @@
       </notes>
       <segment>
         <source>Du hast deinen Anzeigenamen auf EternalTwin geändert. Wir haben diese Änderung soeben für dich übernommen!</source>
-        <target>¡Has cambiado tu nombre visible de EternalTwin, así que lo hemos actualizado por ti!</target>
+        <target>¡Has cambiado tu nombre visible de Eternaltwin, así que lo hemos actualizado por ti!</target>
       </segment>
     </unit>
     <unit id="OUS.MDw">
@@ -840,7 +840,7 @@
       </notes>
       <segment>
         <source>Dein EternalTwin-Benutzername enthält Elemente, die auf MyHordes nicht gestattet sind. Bitte ändere deinen Namen auf EternalTwin, um dich auf MyHordes anmelden zu können.</source>
-        <target>Tu nombre de usuario de EternalTwin contiene elementos que no están permitidos en MyHordes. Debes cambiar tu nombre de EternalTwin para poder ingresar en MyHordes.</target>
+        <target>Tu nombre de usuario de Eternaltwin contiene elementos que no están permitidos en MyHordes. Debes cambiar tu nombre de Eternaltwin para poder ingresar en MyHordes.</target>
       </segment>
     </unit>
     <unit id=".gp.m4T">
