--- a/translations/login+intl-icu.fr.xlf
+++ b/translations/login+intl-icu.fr.xlf
@@ -480,7 +480,7 @@
       </notes>
       <segment>
         <source>MyHordes ist ein Teil des EternalTwin-Netzwerks. Wenn du einen EternalTwin-Account hast, kannst du MyHordes ohne zusätzliche Registrierung spielen!</source>
-        <target>MyHordes fait partie du réseau EternalTwin. Si vous avez un compte EternalTwin, vous pouvez jouer à MyHordes sans inscription supplémentaire !</target>
+        <target>MyHordes fait partie du réseau Eternaltwin. Si vous avez un compte Eternaltwin, vous pouvez jouer à MyHordes sans inscription supplémentaire !</target>
       </segment>
     </unit>
     <unit id="qo4M11k" name="Über EternalTwin einloggen">
@@ -490,7 +490,7 @@
       </notes>
       <segment>
         <source>Über EternalTwin einloggen</source>
-        <target>Connectez-vous via EternalTwin</target>
+        <target>Connectez-vous via Eternaltwin</target>
       </segment>
     </unit>
     <unit id="LiGRhEI">
@@ -510,7 +510,7 @@
       </notes>
       <segment>
         <source>Dies wird nicht für immer möglich sein. Wir raten dir, deinen alten MyHordes-Account so bald wie möglich mit EternalTwin zu verknüpfen.</source>
-        <target>Cela ne sera pas possible pour toujours. Nous vous conseillons de lier votre ancien compte MyHordes à EternalTwin dès que possible.</target>
+        <target>Cela ne sera pas possible pour toujours. Nous vous conseillons de lier votre ancien compte MyHordes à Eternaltwin dès que possible.</target>
       </segment>
     </unit>
     <unit id="uT6i9yH">
@@ -520,7 +520,7 @@
       </notes>
       <segment>
         <source>Deine Seele bleibt bei der Verknüpfung mit EternalTwin selbstverständlich vollständig erhalten.</source>
-        <target>Votre âme sera bien sûr complètement préservée lorsque vous vous connecterez à EternalTwin.</target>
+        <target>Votre âme sera bien sûr complètement préservée lorsque vous vous connecterez à Eternaltwin.</target>
       </segment>
     </unit>
     <unit id="RG1kp2m" name="Über MyHordes einloggen">
@@ -540,7 +540,7 @@
       </notes>
       <segment>
         <source>Verknüpfung mit EternalTwin</source>
-        <target>Lien avec EternalTwin</target>
+        <target>Lien avec Eternaltwin</target>
       </segment>
     </unit>
     <unit id="sndALWW" name="Gleich kanns losgehen!">
@@ -563,7 +563,7 @@
       <segment>
         <source>&lt;strong&gt;Achtung:&lt;/strong&gt; Du hast bereits einen MyHordes-Account? Dann solltest du jetzt
                                     &lt;i&gt;abbrechen&lt;/i&gt; und dich zuerst mit deinem alten MyHordes-Account einloggen. Du kannst deinen
-                                    EternalTwin-Account in den Einstellungen mit deinem MyHordes-Account verknüpfen.</source>
+                                    Eternaltwin-Account in den Einstellungen mit deinem MyHordes-Account verknüpfen.</source>
         <target><![CDATA[<strong>Attention :</strong> avez-vous déjà un compte MyHordes? Alors vous devriez maintenant <i>annuler la connexion</i> et vous connecter d'abord avec votre ancien compte MyHordes. Vous pouvez lier votre compte EternalTwin à votre compte MyHordes dans les paramètres.]]></target>
       </segment>
     </unit>
@@ -614,7 +614,7 @@
       </notes>
       <segment>
         <source>Vielen Dank, dass du deinen MyHordes-Account {namecheck_mh} mit deinem EternalTwin-Account {namecheck_et} verknüpfst!</source>
-        <target>Merci d'avoir associé votre compte MyHordes {namecheck_mh} à votre compte EternalTwin {namecheck_et} !</target>
+        <target>Merci d'avoir associé votre compte MyHordes {namecheck_mh} à votre compte Eternaltwin {namecheck_et} !</target>
       </segment>
     </unit>
     <unit id="7JD3pLt">
@@ -624,7 +624,7 @@
       </notes>
       <segment>
         <source>Nach der Verknüpfung kannst du dich nur noch über EternalTwin in MyHordes anmelden. Deine alten Zugangsdaten werden ungültig.</source>
-        <target>Après le lien, vous ne pouvez vous connecter à MyHordes que via EternalTwin. Vos anciennes données d'accès seront invalides.</target>
+        <target>Après le lien, vous ne pouvez vous connecter à MyHordes que via Eternaltwin. Vos anciennes données d'accès seront invalides.</target>
       </segment>
     </unit>
     <unit id="r.jGoXw">
@@ -734,7 +734,7 @@
       </notes>
       <segment>
         <source>Bevor du mit deinem EternalTwin-Account spielen kannst, brauchen wir noch ein paar zusätzliche Informationen von dir.</source>
-        <target>Avant de pouvoir jouer avec votre compte EternalTwin, nous avons besoin de quelques informations supplémentaires de votre part.</target>
+        <target>Avant de pouvoir jouer avec votre compte Eternaltwin, nous avons besoin de quelques informations supplémentaires de votre part.</target>
       </segment>
     </unit>
     <unit id="wmjJuDK">
@@ -826,7 +826,7 @@
       </notes>
       <segment>
         <source>Du hast deinen Anzeigenamen auf EternalTwin geändert. Wir haben diese Änderung soeben für dich übernommen!</source>
-        <target>Vous avez changé votre nom d’affichage sur EternalTwin. Nous venons de prendre en compte ce changement !</target>
+        <target>Vous avez changé votre nom d’affichage sur Eternaltwin. Nous venons de prendre en compte ce changement !</target>
       </segment>
     </unit>
     <unit id="OUS.MDw">
@@ -836,7 +836,7 @@
       </notes>
       <segment>
         <source>Dein EternalTwin-Benutzername enthält Elemente, die auf MyHordes nicht gestattet sind. Bitte ändere deinen Namen auf EternalTwin, um dich auf MyHordes anmelden zu können.</source>
-        <target>Votre nom d’utilisateur EternalTwin contient des éléments qui ne sont pas autorisés sur MyHordes. Veuillez changer votre nom sur EternalTwin pour vous connecter à MyHordes.</target>
+        <target>Votre nom d’utilisateur Eternaltwin contient des éléments qui ne sont pas autorisés sur MyHordes. Veuillez changer votre nom sur Eternaltwin pour vous connecter à MyHordes.</target>
       </segment>
     </unit>
     <unit id=".gp.m4T">
